[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/arena.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/MangabeyRegular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Arena/Arena.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Arena" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
margin_left = 40.0
margin_top = 45.0
margin_right = 240.0
margin_bottom = 95.0
color = Color( 0.0235294, 0.027451, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LobbyBtn" type="TextureButton" parent="NinePatchRect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="NinePatchRect/ColorRect/LobbyBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -18.0
margin_right = 86.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Back to Lobby"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="NinePatchRect"]
margin_left = 924.0
margin_top = 600.0
margin_right = 1224.0
margin_bottom = 680.0
color = Color( 0.027451, 0.0784314, 0.278431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBattleBtn" type="TextureButton" parent="NinePatchRect/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="NinePatchRect/ColorRect2/SearchBattleBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -36.0
margin_right = 81.0
margin_bottom = 36.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Search"
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 120.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -36.0
margin_right = 68.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Arena"
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect"]
margin_left = 964.0
margin_top = 15.0
margin_right = 1264.0
margin_bottom = 55.0
grow_horizontal = 0
__meta__ = {
"_edit_lock_": true
}

[node name="PlayersSearchingLabel" type="Label" parent="NinePatchRect/NinePatchRect2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -18.0
margin_right = 226.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Players searching: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayersSearchingListUpdateTimer" type="Timer" parent="NinePatchRect/NinePatchRect2"]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="NinePatchRect/ColorRect/LobbyBtn" to="." method="_on_LobbyBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/ColorRect2/SearchBattleBtn" to="." method="_on_SearchBattleBtn_pressed"]
[connection signal="timeout" from="NinePatchRect/NinePatchRect2/PlayersSearchingListUpdateTimer" to="." method="_on_PlayersSearchingListUpdateTimer_timeout"]
